--- a/practica06.html
+++ b/practica06.html
@@ -4,38 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practica06</title>
-    <style>
-        *{
-            box-sizing: border-box;
-            font-family: 'Times New Roman', Times, serif;
-        }
-        form{
-            box-shadow: 10px 20px 20px;
-            width: 300px;
-            margin: 0 auto  ;
-            border: 1px solid lightgray;
-            padding: 15px;
-            border-radius: 5%;
-        }
-        label{
-            display:block;
-        }
-        input{
-            margin-bottom: 15px;
-            width: 100%;
-            padding: 10px;
-            border: 1px solid lightblue;
-            border-radius: 5%;
-        }
-        input[type="submit"] {
-            background-color: blue;
-            color: white;
-        }
-        h1{
-            text-align: cente
-            r;
-        }
-    </style>
+    <link rel="stylesheet" href="practica06.css">
 </head>
 <body>
         <h1>Inicio de Sesion</h1>
@@ -46,17 +15,6 @@
             <input type="password" id="password" name="password">
             <input type="submit" value="Iniciar Sesion" id="s">
     </form>
-
-    <script>
-        const formulario = document.getElementById("s")
-        formulario.addEventListener("click", evento =>{
-            evento.preventDefault()
-        
-        let u = document.getElementById("user").value
-        let p = document.getElementById("password").value
-        
-        alert(u+p)
-    })
-    </script>
-</body>
+    <script src="practica06.js"></script>
+</body> 
 </html>
