--- a/practica06.html
+++ b/practica06.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <h1>Inicio de Sesion</h1>
-        <form action="" method="post" id="formularo">
+        <form action="" method="post" id="formulario">
             <label for="user">Nombre de usuario:</label>
             <input type="text" id="user" name="user">
             <label for="password">Contraseña:</label>
