--- a/practica07.html
+++ b/practica07.html
@@ -7,27 +7,12 @@
     <link rel="stylesheet" href="practica07.css">
 </head>
 <body>
-        <h1>Inicio de Sesion</h1>
+        <h1>Formulario de Contacto</h1>
         
         <form action="" method="post" id="formulario">
-            <fieldset>
-                <legend>Encabezado:</legend>
-            <label for="user">Nombre de usuario:</label>
-            <input type="text" id="user" name="user">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password">
-            </fieldset>
 
-            <fieldset>
-                <legend>Encabezado:</legend>
-            <label for="user">Nombre de usuario:</label>
-            <input type="text" id="user" name="user">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password">
-            </fieldset>
-
-            <input type="submit" value="Iniciar Sesion" id="s">
+            <input type="submit" value="Enviar" id="s">
         </form>
     <script src="practica07.js"></script>
 </body> 
-</html>
+</html> 
